<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Main -->
    <string name="main_newgame">New Game</string>
    <string name="main_unlocked">Unlocked Art</string>
    <string name="main_options">Options</string>
    <string name="main_about">About</string>
    <!-- End Main -->

    <!-- About -->
    <string name="about_developed_by">Design and Developed by QuitArts</string>
    <string name="about_author01">Alejandro Eliseche</string>
    <string name="about_author02">Luis Floreani</string>
    <string name="about_author03">Leonardo Greco</string>
    <string name="about_author04">Martin Gonzalez</string>
    <string name="about_art_by">Art by Pizza Pixel</string>
    <string name="about_author05">Ezequiel Salatino</string>
    <string name="about_author06">Alejandro Romero</string>
    <string name="about_music_by">Music by Taking Off</string>
    <string name="about_version">Cellfense v1.2</string>
    <!-- End About -->

    <!-- Options -->
    <string name="option_music">Music</string>
    <string name="option_play_music">Play background music</string>
    <string name="option_play_music_summary_on">Background music on</string>
    <string name="option_play_music_summary_off">Background music off</string>
    <string name="option_play_music_volume">Music Volume</string>
    <string name="option_play_music_volume_summary">Set the music volume</string>
    <string name="option_sound">Sound Effects</string>
    <string name="option_play_sound">Play sound effects</string>
    <string name="option_play_sound_summary_on">Sounds on</string>
    <string name="option_play_sound_summary_off">Sounds off</string>
    <string name="option_play_sound_volume">Sound Volume</string>
    <string name="option_play_sound_volume_summary">Set the sound volume</string>
    <!-- End Options -->

    <!-- Dialog -->
    <string name="dialog_message_exit">Exit Game?</string>
    <!-- End Dialog -->

    <string name="app_name">Cellfense</string>
    <string name="button_new_game_static">Challenge Mode</string>
    <string name="button_tutorial">Tutorial</string>
    <string name="options_title">Options</string>
    <string name="about_title">About Cellfense</string>
    <string name="loading_message">Loading. Please wait...</string>
    <string name="game_over_dialog_message">- GAME OVER -</string>
    <string name="gameover_maxcombo_dialog_message">MaxCombo:</string>
    <string name="gameover_try_again_dialog_message">Try it Again?</string>
    <string name="score">Score: </string>
    <string name="Wave">L</string>
    <string name="Block_Message">Blocking!</string>
    <string name="Next_Wave_Message">Ready!</string>
    <string name="LTA_UPGRADE_LABEL">+POWER</string>
    <string name="Level_complete_dialog_message">LEVEL COMPLETE!</string>
    <string name="Play_Again_dialog_message">Play Again?</string>
    <string name="post_score">Post</string>
    <string name="Sell_Tower">Sell Tower</string>
    <string name="tutorial_S1_SCREEN1">Look at the enemies positioning</string>
    <string name="tutorial_S1_SCREEN1_2">in this screen.</string>
    <string name="tutorial_S1_SCREEN1_3">Touch the arrows panel to prepare your defense.</string>
    <string name="tutorial_S2_SCREEN2">Drag a tower</string>
    <string name="tutorial_S2_SCREEN2_2">and place it in the specified spot.</string>
    <string name="tutorial_S2_SCREEN2_3">The towers cost energy.</string>
    <string name="tutorial_S3_TOWER_DRAGED">Towers shoot automatically.</string>
    <string name="tutorial_S3_TOWER_DRAGED_2">Press play when you are ready.</string>
    <string name="tutorial_S4_PLAY_PRESSED">Your mission is to destroy all enemies.</string>
    <string name="Ok">OK</string>
    <string name="tutorial_s5_popup_win">You completed the first stage of the tutorial</string>
    <string name="tutorial_try_again_message_1">Just for this time use the specified spot</string>
    <string name="tutorial_pop_up_vs">The tower Capacitor is more efficient</string>
    <string name="tutorial_pop_up_vs_1">against the Spider.</string>
    <string name="tutorial_pop_up_vs_2">The tower Tank is more efficient</string>
    <string name="tutorial_pop_up_vs_3">against the Caterpillar.</string>
    <string name="tutorial_pop_up_vs_4"> (Touch to continue)</string>
    <string name="tutorial_L2_tip">Remember what you learned. Redefine your strategy.</string>
    <string name="tutorial_L2_next_Level">Now you will learn how to use the LTA.</string>
    <string name="tutorial_L2_tower_draged">You can also move or return the towers</string>
    <string name="tutorial_L2_tower_draged_1">to redefine your strategy.</string>
    <string name="congratulations">Congratulations</string>
    <string name="tutorial_S15_L3_SCREEN2">Prepare your defense and press play.</string>
    <string name="tutorial_S16_L3_PLAY_PRESSED">Notice that you still have energy</string>
    <string name="tutorial_S16_L3_PLAY_PRESSED_2">to shoot the LTA.</string>
    <string name="tutorial_S17_L3_GAME_PAUSE">Use the LTA to slow enemies</string>
    <string name="tutorial_S17_L3_GAME_PAUSE_2">Using it consumes energy (1 bar)</string>
    <string name="tutorial_S17_L3_GAME_PAUSE_3">and the effect is temporary.</string>
    <string name="tutorial_S19_L3_POPUP_WIN">Cool. Now you will learn how to power up the towers</string>
    <string name="tutorial_S25_L4_GAME_PAUSE">Touch the tower to power it up</string>
    <string name="tutorial_S25_L4_GAME_PAUSE_2">Using it consumes energy (2 bars)</string>
    <string name="tutorial_S25_L4_GAME_PAUSE_3">and the effect is temporary.</string>
    <string name="tutorial_S27_L4_END_TUTORIAL">Congratulations! You completed the tutorial</string>
    <string name="new_unlocked_art">You unlocked new art!</string>
</resources>