<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_separator_top" />

    <Button
        android:id="@+id/main_button_newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_newgame"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/main_button_unlocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/main_unlocked"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/main_button_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/main_options"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/main_button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/main_about"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_separator_bottom" />

</LinearLayout>